@@ -26,8 +26,8 @@ import org.apache.kafka.timeline.SnapshotRegistry;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 
 import static org.apache.kafka.coordinator.share.metrics.ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_LATENCY_SENSOR_NAME;
@@ -42,7 +42,7 @@ public class ShareCoordinatorMetricsTest {
     public void testMetricNames() {
         Metrics metrics = new Metrics();
 
-        HashSet<MetricName> expectedMetrics = new HashSet<>(Arrays.asList(
+        HashSet<MetricName> expectedMetrics = new HashSet<>(List.of(
             metrics.metricName("write-rate", ShareCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("write-total", ShareCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("write-latency-avg", ShareCoordinatorMetrics.METRICS_GROUP),
